--- a/src/components/Content/Dues/duesSubPages/CurrentStatus/CurrentStatus.module.scss
+++ b/src/components/Content/Dues/duesSubPages/CurrentStatus/CurrentStatus.module.scss
@@ -12,11 +12,19 @@
     margin: 0 0 15px 0;
     font-size: 19.9px;
     font-weight: 600;
+
+    @media (max-width: 790px) {
+      font-size: 16px;
+    }
   }
 
   .dueDate {
     margin: 0 0 20px 0;
     font-size: 18px;
+
+    @media (max-width: 790px) {
+      font-size: 14px;
+    }
 
     .date {
       color: $themeColor;
@@ -30,9 +38,11 @@
       background-color: $tableHeaderBgColor;
       font-weight: 600;
       color: $themeColor;
+
       &:first-child {
         border-top-left-radius: 4.5px;
       }
+
       &:last-child {
         border-top-right-radius: 4.5px;
       }
@@ -40,6 +50,11 @@
 
     td {
       background-color: white;
+
+      @media (max-width: 790px) {
+        font-size: 14px;
+        padding: 10px; // Compact padding for mobile
+      }
 
       &:first-child {
         color: $themeColor;
@@ -67,4 +82,11 @@
 .note {
   margin-left: 30px;
   font-size: 14.6px;
+
+  @media (max-width: 790px) {
+    font-size: 14px;
+    margin-left: 0;
+    text-align: center;
+    padding: 0 20px;
+  }
 }
