--- a/src/components/Content/Dues/duesSubPages/FeeDemand/FeeDemand.module.scss
+++ b/src/components/Content/Dues/duesSubPages/FeeDemand/FeeDemand.module.scss
@@ -6,10 +6,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80px;
+  min-height: 80px;
+  padding: 20px;
+  text-align: center;
+
   p {
     font-family: "Inter", sans-serif;
     font-size: 19px;
+    margin: 0;
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+    }
+
     a {
       color: $linkColor;
       text-decoration: none;
