--- a/src/components/Content/Dues/duesSubPages/Deposits/Deposits.module.scss
+++ b/src/components/Content/Dues/duesSubPages/Deposits/Deposits.module.scss
@@ -12,11 +12,19 @@
     margin: 0 0 20px 0;
     font-size: 19.9px;
     font-weight: 600;
+
+    @media (max-width: 790px) {
+      font-size: 16px;
+    }
   }
 
   .description {
     margin: 0 0 20px 0;
     font-size: 16px;
+
+    @media (max-width: 790px) {
+      font-size: 14px;
+    }
   }
 
   .tableWrapper {
