--- a/src/components/Content/Passport&Mess/Passport&Mess.module.scss
+++ b/src/components/Content/Passport&Mess/Passport&Mess.module.scss
@@ -11,6 +11,10 @@
     border-radius: var(--borderRadius);
     background-color: $themeBgColor;
 
+    @media (max-width: 790px) {
+      padding: 15px 20px;
+    }
+
     .certificateForm {
       display: flex;
       flex-direction: column;
@@ -19,19 +23,46 @@
       gap: 25px;
       font-size: 18.75px;
 
+      @media (max-width: 790px) {
+        font-size: 16px;
+      }
+
       .title {
         color: $themeColor;
         font-weight: 600;
+        text-align: center;
+
+        @media (max-width: 790px) {
+          font-size: 18px;
+        }
       }
+
       .formGroup {
         display: flex;
         width: 52%;
         align-items: center;
 
+        @media (max-width: 1200px) {
+          width: 80%;
+        }
+
+        @media (max-width: 790px) {
+          width: 100%;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 5px;
+        }
+
         .label {
           font-size: 18.75px;
           width: 350px;
           font-weight: 500;
+
+          @media (max-width: 790px) {
+            width: 100%;
+            font-size: 14px;
+            margin-bottom: 5px;
+          }
         }
 
         input::-webkit-outer-spin-button,
@@ -39,6 +70,7 @@
           -webkit-appearance: none;
           margin: 0;
         }
+
         input {
           padding: 0px 10px;
           font-size: 16.5px;
@@ -48,6 +80,11 @@
           border-radius: 4.5px;
           background-color: $inputBgColor;
           font-family: "inter";
+
+          @media (max-width: 790px) {
+            width: 100%;
+            font-size: 14px;
+          }
         }
       }
     }
@@ -59,6 +96,7 @@
       }
     }
   }
+
   .prevApplied {
     padding: 25.5px 45px;
     border-radius: var(--borderRadius);
@@ -69,11 +107,23 @@
     align-items: center;
     gap: 15px;
     font-size: 19.9px;
+
+    @media (max-width: 790px) {
+      padding: 15px 20px;
+      font-size: 14px;
+    }
+
     .title {
       font-weight: 600;
       font-size: 18.75px;
       color: $themeColor;
+      text-align: center;
+
+      @media (max-width: 790px) {
+        font-size: 16px;
+      }
     }
+
     .appliedCerti {
       span {
         font-weight: 500;
