--- a/src/components/Content/UploadPhotoForIdCard/UploadPhotoForIdCard.module.scss
+++ b/src/components/Content/UploadPhotoForIdCard/UploadPhotoForIdCard.module.scss
@@ -5,10 +5,15 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
   .uploadPhoto {
     padding: 25.5px 45px;
     border-radius: var(--borderRadius);
     background-color: $themeBgColor;
+
+    @media (max-width: 790px) {
+      padding: 15px 20px;
+    }
 
     .photoForm {
       display: flex;
@@ -16,13 +21,30 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
+
       .title {
         font-size: 18.75px;
         color: $themeColor;
         font-weight: 600;
+        text-align: center;
+
+        @media (max-width: 790px) {
+          font-size: 16px;
+        }
       }
+
       .uploadPhotoContainer {
         width: 300px;
+
+        @media (max-width: 790px) {
+          width: 100%;
+          max-width: 300px;
+        }
+
+        @media (max-width: 350px) {
+          width: 100%; // Ensure it fits
+        }
+
         .fileInput {
           position: relative;
           height: 30px;
@@ -73,11 +95,19 @@
     padding: 25.5px 30px;
     padding-top: 0px;
     font-size: 18.75px;
+
+    @media (max-width: 790px) {
+      padding: 15px 20px;
+      font-size: 14px;
+    }
+
     display: flex;
     flex-direction: column;
     font-weight: 600;
+
     ul {
       padding-left: 30px;
+
       li {
         font-weight: 400;
       }
